--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
       <div class="container header-container">
         <nav class="main-nav">
-          <a class="webstudio" href="./index.html"><span class="txt-bl">Web</span>Studio</a>          >
+          <a class="webstudio" href="./index.html"><span class="txt-bl">Web</span>Studio</a>
           <ul class="all-header">
             <li class="item header-link">
               <a href="./index.html" class="link current" >Студия</a>
