--- a/portfolio.html
+++ b/portfolio.html
@@ -13,21 +13,18 @@
     />
   </head>
   <body>
-    <header class="header-sections">
+    <header class="header">
       <div class="container header-container">
         <nav class="main-nav">
-          <a class="webstudio" href="./index.html"
-            ><span class="txt-bl">Web</span>Studio</a
-          >
+          <a class="webstudio" href="./index.html"><span class="txt-bl">Web</span>Studio</a>
           <ul class="all-header">
             <li class="item header-link">
-              <a href="./index.html" class="link" >Студия</a>
+              <a href="./index.html" class="link current" >Студия</a>
             </li>
             <li class="item header-link">
-              <a href="./portfolio.html"  class="link current">Портфолио</a>
+              <a href="./portfolio.html" class="link">Портфолио</a>
             </li>
-            <li class="item header-link">
-              <a href="" class="link">Контакты</a></li>
+            <li class="item header-link"><a href="" class="link">Контакты</a></li>
           </ul>
           </nav>
           <ul class="header-contacts">
@@ -241,10 +238,9 @@
           <div class="footer-form">
             <p class="footer-form-head">Подпишитесь на рассылку</p>
             <form class="footer-form-content">
-              <input type="meil" name="email" id="email" class="mail-form" placeholder="E-mail">
+              <input type="text" name="email" id="email" class="mail-form" placeholder="E-mail">
               <label for="email" class="mail-label"></label>
-              <button type="submit" class="footer-form-btn">
-                  <p class="footer-form-btn-text">Подписаться</p> 
+              <button type="submit" class="footer-form-btn">Подписаться
                   <svg width="24" height="24">
                     <use href="./images/symbol-defs.svg#icon-telegram"></use>
                   </svg>
